# Multi-Tenant-Notifications-Platform

./: .dockerignore  .gitignore  README.md  SECURITY.md
platform/: CMakeLists.txt  Dockerfile
platform/common/: README.md
platform/common/include/: request_context.h
platform/deploy/k8s/: build-images-minikube.sh  cassandra-schema-job.yaml  cassandra.yaml  configmap.yaml  dispatcher.yaml  gateway.yaml  hpa.yaml  namespace.yaml  redis.yaml  storage.yaml
platform/infra/: README.md  docker-compose.local.yml  local.env.example
platform/infra/cassandra/: schema.cql
platform/services/dispatcher/: CMakeLists.txt
platform/services/dispatcher/src/: main.cpp
platform/services/gateway/: CMakeLists.txt
platform/services/notification-dispatcher/: CMakeLists.txt  README.md
platform/services/notification-dispatcher/src/: dispatcher_main.cpp
platform/services/notification-gateway/: CMakeLists.txt  README.md
platform/services/notification-gateway/src/: gateway_main.cpp
platform/services/notification-storage/: CMakeLists.txt  README.md
platform/services/notification-storage/src/: storage_main.cpp
platform/services/storage/: CMakeLists.txt  README.md
platform/tests/: README.md
platform/tests/e2e/: README.md  auth_negative_checks.sh  idempotency_e2e.sh  jwt_helpers.sh  run_all.sh  smoke_e2e.sh  ws_delivery_e2e.ts  ws_tenant_mismatch_e2e.ts
platform/tests/k6/: README.md  smoke_submit.js
platform/tests/load/: README.md  run_all.sh
platform/tests/load/k6/: README.md  burst_spike.js  burst_spike.ts  reconnect_storm.js  (+7 more)
platform/tools/: replay_dlq.sh
(+29 files in other folders)
